# tusk

./: .envrc  .gitignore  AGENTS.md  devenv-cache-module.nix  devenv-codex-module.nix  devenv-scratch-module.nix  flake-module.nix  flake.nix  lib.nix  repo-shell-lib.nix
crates/tusk-bridge-adapter/: Cargo.toml
crates/tusk-bridge-adapter/src/: lib.rs  main.rs
crates/tusk-ui/: Cargo.toml
crates/tuskd-core/: Cargo.toml
design/: README.md  tusk-architecture.md  tusk-backend-service-carrier.md  tusk-bootstrap-contract.md  tusk-freeze.md  tusk-governed-transition-adapters.md  tusk-isolation-attachment.md  tusk-operator-ux-model.md  tusk-paid-http-executor-contract.md  tusk-paid-http-protocol-boundary.md  tusk-self-host-automation.md  tusk-self-host-witnesses.md  tusk-semantic-spine-map.md  tusk-tracker-lease-service.md  tusk-transition-carrier.md  tusk-upstream-boundary.md  tusk-workflow-topology.md
knowledge/: README.md  index.md  log.md
modules/: bridge-kurma-sidecar.nix  cache.nix
scripts/: bd.sh  codex-home-bootstrap.sh  init-tusk-control-plane.sh  tusk-bridge-conformance-check.sh  tusk-claude.sh  tusk-clean.sh  tusk-codex.sh  tusk-flake-ref.sh  tusk-hermes-probe-container.sh  tusk-hermes-probe.sh  tusk-hermes-runtime-container.sh  tusk-hermes-runtime.sh  tusk-paths.sh  tusk-radicle.sh  tusk-self-host.sh  tusk-skill-contract-check.sh  tusk-skill-loop.sh  tusk-trace-executor.sh  tusk-tracker.sh  tuskd-transition-tests.sh  tuskd.sh
tools/radicle-flake-wasm/crates/resolver/: Cargo.toml
tools/radicle-flake-wasm/crates/resolver/src/: lib.rs  main.rs  nix_plugin.rs
(+144 files in other folders)
