[package]
name = "tusk-bridge-adapter"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
sha2 = "0.10"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
